<resources>
    <string name="app_name">GraphicalPassApp</string>

    <!-- Main Activity Page -->
    <string name="passLength">Select your password length:</string>
    <string name="loginButton">Login</string>
    <string name="setupButton">Setup Password</string>
    <string name="userHint">Enter your username</string>
    <string name="userPass">/Enter your password</string>

    <!-- Spinner -->
    <string-array name="passwordLength">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!-- Login Screen 1 -->
    <string name="selectLoginImage1">Select your first image:</string>
    <string name="loginButton1">Next</string>
    <!-- Login Screen 2 -->
    <string name="selectLoginImage2">Select your second image:</string>
    <string name="loginButton2">Next</string>
    <!-- Login Screen 3 -->
    <string name="selectLoginImage3">Select your third image:</string>
    <string name="loginButton3">Next</string>
    <!-- Login Screen 4 -->
    <string name="selectLoginImage4">Select your fourth image:</string>
    <string name="loginButton4">Next</string>


    <!-- Instructions to select an image -->
    <string name="selectImage">Select the first image in your password:</string>


    <!-- Password Setup -->
    <!-- Setup Screen 1 -->
    <string name="selectSetupImage1">Select your first image:</string>
    <string name="setupButton1">Next</string>
    <!-- Setup Screen 2 -->
    <string name="selectSetupImage2">Select your second image:</string>
    <string name="setupButton2">Next</string>
    <!-- Setup Screen 3 -->
    <string name="selectSetupImage3">Select your third image:</string>
    <string name="setupButton3">Next</string>
    <!-- Setup Screen 4 -->
    <string name="selectSetupImage4">Select your fourth image:</string>
    <string name="setupButton4">Next</string>

    <string name="image_4_text">Select your final image:</string>
    <string name="pigcartoon">pigcartoon</string>
    <string name="bearcartoon">bearcartoon</string>
    <string name="monkeycartoon">monkeycartoon</string>
    <string name="greenguycartoon">greenguycartoon</string>
    <string name="ratcartoon">ratcartoon</string>
    <string name="securitycartoon">securitycartoon</string>
    <string name="thiefcartoon">thiefcartoon</string>
    <string name="bunny">bunny</string>
    <string name="elephant">Elephant</string>
    <string name="hippo">hippo</string>
    <string name="fish">fish</string>
    <string name="scorpion">scorpion</string>
    <string name="owl">owl</string>
    <string name="lion">lion</string>
    <string name="zebra">zebra</string>
    <string name="blocksabc">blocksabc</string>
    <string name="compass">compass</string>
    <string name="earth">earth</string>
    <string name="grapes">grapes</string>
    <string name="spiderweb">spiderwebs</string>
    <string name="swirls">swirls</string>
    <string name="branch">branch</string>
    <string name="vulture">vulture</string>
    <string name="anchor">anchor</string>
    <string name="bottle">bottle</string>
    <string name="coffeecup">coffeecup</string>
    <string name="gears">gears</string>
    <string name="post">post</string>
    <string name="key">key</string>
    <string name="rocket">rocket</string>
    <string name="tracks">tracks</string>
    <string name="pigycartoon">piggycartoon</string>
    <string name="title_activity_notes">notes</string>
</resources>
