<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login3">

    <TextView
        android:id="@+id/loginText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/selectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/selectSetupImage3"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton17"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/anchor"
            android:cropToPadding="true"
            android:src="@drawable/anchor" />

        <ImageButton
            android:id="@+id/imageButton18"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/bottle"
            android:cropToPadding="true"
            android:src="@drawable/bottle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton19"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/coffeecup"
            android:cropToPadding="true"
            android:src="@drawable/coffee" />

        <ImageButton
            android:id="@+id/imageButton20"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/gears"
            android:cropToPadding="true"
            android:src="@drawable/gears" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton21"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/post"
            android:cropToPadding="true"
            android:src="@drawable/post" />

        <ImageButton
            android:id="@+id/imageButton22"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/key"
            android:cropToPadding="true"
            android:src="@drawable/key" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton23"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/rocket"
            android:cropToPadding="true"
            android:src="@drawable/rocket" />

        <ImageButton
            android:id="@+id/imageButton24"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/tracks"
            android:cropToPadding="true"
            android:src="@drawable/tracks"
            android:layout_height="100dp" />

    </LinearLayout>

    <Button
        android:id="@+id/loginButton3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#FFF"
        android:text="@string/loginButton3"
        android:onClick="getLoginPage_4" />

</LinearLayout>