<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context=".login1">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/selectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/selectSetupImage1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/elephant"
            android:onClick="useElephant"
            android:cropToPadding="true"
            android:src="@drawable/elephant" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/bunny"
            android:cropToPadding="true"
            android:onClick="useBunny"
            android:src="@drawable/bunny" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/fish"
            android:onClick="useFish"
            android:cropToPadding="true"
            android:src="@drawable/fish" />

        <ImageButton
            android:id="@+id/imageButton04"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/zebra"
            android:onClick="useZebra"
            android:cropToPadding="true"
            android:src="@drawable/zebra" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/lion"
            android:onClick="useLion"
            android:cropToPadding="true"
            android:src="@drawable/lion" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/owl"
            android:onClick="useHawk"
            android:cropToPadding="true"
            android:src="@drawable/owl" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/scorpion"
            android:onClick="useScorpion"
            android:cropToPadding="true"
            android:src="@drawable/scorpion" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/hippo"
            android:onClick="useHippo"
            android:cropToPadding="true"
            android:src="@drawable/hippo" />

    </LinearLayout>

    <Button
        android:id="@+id/loginButton1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#FFF"
        android:text="@string/loginButton1"
        android:onClick="getLoginPage_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@+id/testTextViewName"
        android:id="@+id/testTextViewName"
        android:textColor="#000" />

</LinearLayout>